docs/build/identity.rs/v0.5.0/docs/getting_started/install.mdx
---
description: Install the IOTA Identity Rust Library or its WASM binding in a few simple steps
image: /img/Identity_icon.png
sidebar_label: Install the Library
title: Install the Library
keywords:
  - Identity
  - install
  - npm
  - cargo
  - Rust
  - WASM
---

<Announcement />

## Rust

### Requirements

- [Rust](https://www.rust-lang.org/tools/install)
- [Cargo](https://doc.rust-lang.org/cargo/getting-started/installation.html)

### Include the Library

You can include the IOTA Identity Library in your project by adding it as a dependency in your `Cargo.toml`.

#### Latest Stable Release

This version matches the `main` branch of this repository. It is **stable** and will have **changelogs**.

```rust
[dependencies]
identity = { git = "https://github.com/iotaledger/identity.rs", branch = "main"}
```

#### Development Release

This version matches the `dev` branch of this repository. It has all the **latest features**, but as such it **may also have undocumented breaking changes**.

```rust
[dependencies]
identity = { git = "https://github.com/iotaledger/identity.rs", branch = "dev"}
```

You can find detailed installation instructions in the [Getting Started With Rust](../libraries/rust/getting_started.mdx) section.

## WASM

### Requirements

- [Npm](https://docs.npmjs.com/downloading-and-installing-node-js-and-npm)
- [Node.js](https://docs.npmjs.com/downloading-and-installing-node-js-and-npm)

### Install the Library

You can install the WASM binding of the IOTA Identity Library using [npm](https://www.npmjs.com/).

#### Latest Stable Release

This version matches the `main` branch of this repository. It is **stable** and will have **changelogs**.

```bash
npm install @iota/identity-wasm
```

#### Development Release

This version matches the `dev` branch of this repository. It has all the **latest features**, but as such it **may also have undocumented breaking changes**.

```bash
npm install @iota/identity-wasm@dev
```

You can find detailed installation instructions in the [Getting Started With WASM](../libraries/wasm/getting_started.mdx) section.
